# ace-skyspark-lib

./: .gitignore  CHANGELOG.md  PUBLISHING.md  PYDANTIC_REFACTOR_SUMMARY.md  README.md  REFACTOR_PLAN.md  SECURITY_TEST_BASELINE.md  pyproject.toml
.github/: PYPI_SETUP.md  README.md
.github/workflows/: ci.yml  publish.yml
examples/: basic_usage.py
src/ace_skyspark_lib/: __init__.py  client.py  exceptions.py
src/ace_skyspark_lib/auth/: __init__.py  authenticator.py  token_manager.py
src/ace_skyspark_lib/formats/: __init__.py  zinc.py
src/ace_skyspark_lib/http/: __init__.py  retry.py  session.py
src/ace_skyspark_lib/models/: __init__.py  entities.py  history.py
src/ace_skyspark_lib/operations/: __init__.py  entity_ops.py  history_ops.py  query_ops.py
tests/: __init__.py  check_duplicates.py  debug_auth.py  debug_token.py  find_by_refname.py  test_aiohttp_direct.py  test_auth_session_max_age.py  test_curl.sh  test_formats_zinc.py  test_history_pagination.py  test_httpx_direct.py  test_idempotent.py  test_integration_example.py  test_mod_roundtrip.py  test_models_entities.py  test_models_history.py  test_point_update.py  test_pydantic_refactor.py  test_query_points.py  test_roundtrip.py  test_security_vulnerabilities.py  test_site_equipment_refactor.py  test_with_requests.py
